--- a/дз1.md
+++ b/дз1.md
@@ -1,6 +1,6 @@
 # Домашнее задание №1. Эмулятор для языка оболочки ОС
 
-Тимофеев Никита. ИКБО-68-23. Вариант 25.
+Заморский Илья. ИКБО-68-23. Вариант 9.
 
 ## Код файла shell_emulator.py:
 
